# swole-web

./: .gitignore  .tool-versions  README.md  mix.exs  stack.yaml  swole.cabal
assets/: brunch-config.js  package-lock.json
assets/js/: app.js
config/: config.exs  dev.exs  models  prod.exs  settings.yml  test-settings.yml  test.exs
docker/: Build.plan  Web.plan
elm/: Lens.elm  Main.elm  elm-package.json
elm-test/: Main.elm
elm-test/Swole/: Types.elm
elm/Helpers/: Events.elm  List.elm  Maybe.elm
elm/Swole/: Types.elm
elm/Swole/Components/: Complex.elm  Group.elm  MovementInput.elm  SingleSet.elm  Weight.elm  Workout.elm  WorkoutSet.elm
elm/Swole/Types/: Complex.elm  Group.elm  Movement.elm  Rep.elm  RepScheme.elm  Weight.elm  Workout.elm  WorkoutSet.elm
elm/lib/Extensions/: Events.elm  Maybe.elm
elm/src/: App.elm  Main.elm  State.elm  Types.elm  View.elm
elm/src/Complex/: State.elm  Types.elm  View.elm
elm/src/Swole/Components/: Common.elm  Complex.elm  Weight.elm  WorkoutSet.elm
elm/src/Swole/Types/: Movement.elm  RepScheme.elm  WorkoutSet.elm
elm/src/Weight/: State.elm  Types.elm  View.elm
lib/: swole.ex  swole_web.ex
lib/swole/: application.ex  repo.ex
lib/swole_elm/Helpers/: Events.elm  List.elm
lib/swole_web/: endpoint.ex  gettext.ex  router.ex
lib/swole_web/channels/: user_socket.ex
lib/swole_web/controllers/: page_controller.ex
lib/swole_web/templates/layout/: app.html.eex
lib/swole_web/views/: error_helpers.ex  error_view.ex  layout_view.ex  page_view.ex
priv/repo/: seeds.exs
src/: Application.hs  Foundation.hs  Model.hs  Settings.hs  devel.hs
src/Calculator/: Weight.hs
src/Handler/: Home.hs
src/Model/: Movement.hs  Persist.hs  Weight.hs
templates/home/: index.hamlet
test/: test_helper.exs
test/Calculator/: WeightSpec.hs
test/support/: channel_case.ex  conn_case.ex  data_case.ex
test/swole_web/controllers/: page_controller_test.exs
test/swole_web/views/: error_view_test.exs  layout_view_test.exs  page_view_test.exs
views/: multi-text-field.hamlet
