name:              swole
version:           0.0.0
cabal-version:     >= 1.8
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    hs-source-dirs: src, src/app
    exposed-modules: Application
                     Calculator.Weight
                     Foundation
                     Handler.Common
                     Handler.Home
                     Import
                     Import.NoFoundation
                     Model
                     Model.Movement
                     Model.Persist
                     Model.Weight
                     Settings
                     Settings.StaticFiles

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -fwarn-tabs -O0
    else
        ghc-options:   -Wall -fwarn-tabs -O2

    extensions: CPP
                DeriveDataTypeable
                EmptyDataDecls
                FlexibleContexts
                FlexibleInstances
                GADTs
                GeneralizedNewtypeDeriving
                MultiParamTypeClasses
                NoImplicitPrelude
                NoMonomorphismRestriction
                OverloadedStrings
                QuasiQuotes
                RecordWildCards
                TemplateHaskell
                TupleSections
                TypeFamilies
                ViewPatterns

    build-depends: base
                 , aeson
                 , bytestring
                 , case-insensitive
                 , classy-prelude
                 , classy-prelude-conduit
                 , classy-prelude-yesod
                 , conduit
                 , containers
                 , data-default
                 , directory
                 , fast-logger
                 , file-embed
                 , heroku-persistent
                 , hjsmin
                 , http-conduit
                 , load-env
                 , monad-control
                 , monad-logger
                 , persistent
                 , persistent-postgresql
                 , persistent-template
                 , safe
                 , shakespeare
                 , template-haskell
                 , text
                 , time
                 , unordered-containers
                 , vector
                 , wai
                 , wai-extra
                 , wai-logger
                 , warp
                 , yaml
                 , yesod
                 , yesod-auth
                 , yesod-core
                 , yesod-form
                 , yesod-static

executable         swole
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    src/app
    build-depends:     base, swole

    ghc-options:       -Wall -Werror -threaded -rtsopts -with-rtsopts=-N -O2


test-suite test
    type:              exitcode-stdio-1.0
    main-is:           Spec.hs
    other-modules:     TestImport
                       Calculator.WeightSpec
    hs-source-dirs:    test
    ghc-options:       -Wall

    extensions: CPP
                DeriveDataTypeable
                EmptyDataDecls
                FlexibleContexts
                FlexibleInstances
                GADTs
                GeneralizedNewtypeDeriving
                MultiParamTypeClasses
                NoImplicitPrelude
                NoMonomorphismRestriction
                OverloadedStrings
                QuasiQuotes
                RecordWildCards
                TemplateHaskell
                TupleSections
                TypeFamilies
                ViewPatterns

    build-depends: base
                 , aeson
                 , classy-prelude
                 , classy-prelude-yesod
                 , hspec
                 , monad-logger
                 , persistent
                 , persistent-postgresql
                 , resourcet
                 , shakespeare
                 , swole
                 , transformers
                 , yesod
                 , yesod-auth
                 , yesod-core
                 , yesod-test
